[gd_scene load_steps=5 format=3 uid="uid://c0cfvswgyy0p1"]

[ext_resource type="Script" uid="uid://b1i3d34jx3xcq" path="res://Scripts/UI/card.gd" id="1_8t8ul"]
[ext_resource type="Texture2D" uid="uid://ch0y7tdrv64ss" path="res://Sprites/Cards/Blank.png" id="1_em724"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8t8ul"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_334sn"]

[node name="Card Base" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1152.0
offset_bottom = -648.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8t8ul")

[node name="Texture" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 128.0
offset_bottom = 160.0
scale = Vector2(1.1, 1.1)
texture = ExtResource("1_em724")

[node name="Card" type="Button" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 144.0
offset_bottom = 176.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_8t8ul")
theme_override_styles/normal = SubResource("StyleBoxEmpty_334sn")
flat = true
expand_icon = true

[connection signal="mouse_entered" from="Card" to="." method="_on_card_mouse_entered"]
[connection signal="mouse_exited" from="Card" to="." method="_on_card_mouse_exited"]
[connection signal="pressed" from="Card" to="." method="_on_card_pressed"]
